syntax = "proto3";
package card;

import "google/protobuf/empty.proto";

message CardItem {
  string id = 1;
  string type = 2;
  string display_name = 3;
}

message CardListResponse { repeated CardItem items = 1; }

message StartScrapRequest { string card_id = 1; }

service Card {
  rpc List(google.protobuf.Empty) returns (CardListResponse);
  rpc StartScrap(StartScrapRequest) returns (google.protobuf.Empty);
}